start from scratch again

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -85,6 +85,39 @@ header .icon {
   background: white;
 }
 
+header .settings.icon {
+  font-size: 3.2rem;
+}
+
+header .settings.icon :last-child:after {
+  display: none;
+  content: "Coming Soon!";
+  position: absolute;
+  padding: 0.5rem;
+  background-color: #e2e2e2ab;
+  width: 7rem;
+  height: 2rem;
+  right: 0rem;
+  top: 5rem;
+  font-size: 0.9rem;
+}
+
+header .settings.icon :last-child:hover:after {
+  display: block;
+}
+
+header .settings.icon .info-buttons {
+  position: absolute;
+  padding: 0.5rem;
+  background-color: #e2e2e2ab;
+  width: 11rem;
+  height: 11rem;
+  right: 8rem;
+  top: 4rem;
+  font-size: 1.2rem;
+  font-weight: 400;
+}
+
 .container {
   margin: 0 15rem;
   display: -webkit-box;
@@ -139,6 +172,7 @@ header .icon {
 
 .container .players .result-header:first-child h3 {
   font-weight: 300;
+  margin: 0 1rem;
 }
 
 .container .players .result-header span {
@@ -631,7 +665,7 @@ header .icon {
   bottom: 0.3rem;
   -webkit-transform: translateX(-50%);
           transform: translateX(-50%);
-  left: 50%;
+  left: 85%;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -694,6 +728,15 @@ header .icon {
   }
   .back {
     left: 1rem;
+  }
+  .buttons-start .main-screen .start-options {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .buttons-start .main-screen .start-options .start-hard .button-icons::before {
+    left: -14rem;
   }
   .container {
     margin: 0 5rem;
